omni/tests/goldens/types/undefined_ident_04.omni
let result4:int = missing4
